include/bison_c.h


typedef struct bison_handle_* bison_handle;
typedef uint32_t bison_hash;
typedef enum bison_error {
  BISON_OK = 0, 
  BISON_ERR_NULL = -1, 
  BISON_ERR_TYPE = -2, 
  BISON_ERR_NOT_FOUND = -3, 
  BISON_ERR_DUPLICATE =
      -4, 
  BISON_ERR_EXCEPTION = -5, 
  BISON_ERR_PARSE = -6, 
} bison_error;
typedef void (*bison_method_fn)(
    bison_handle self,
    bison_handle params,
    bison_handle result,
    void* user);
BISON_API bison_handle bison_create(bison_hash klass_name);
BISON_API bison_handle
bison_instantiate(bison_hash ns_name, bison_hash klass_name);
BISON_API bison_handle bison_add_ref(bison_handle h);
BISON_API void bison_release(bison_handle h);
BISON_API bison_handle bison_from_json(const char* json);
BISON_API bison_handle bison_from_yaml(const char* yaml);
typedef struct bison_attributes {
  const char* display_name;     
  const char* description;      
  const char* category;         
  int         obsolete;         
  const char* obsolete_message; 
  int         required;         
} bison_attributes;
BISON_API bison_error bison_add_class(
    bison_hash ns_name,
    bison_handle klass,
    bison_hash parent_name,
    const bison_attributes* meta);
BISON_API bison_handle
bison_find_class(bison_hash ns_name, bison_hash klass_name);
BISON_API bison_error
bison_set_int(bison_handle h, bison_hash name, int32_t value);
BISON_API bison_error
bison_set_float(bison_handle h, bison_hash name, float value);
BISON_API bison_error
bison_set_bool(bison_handle h, bison_hash name, int value);
BISON_API bison_error
bison_set_string(bison_handle h, bison_hash name, const char* value);
BISON_API bison_error
bison_set_object(bison_handle h, bison_hash name, bison_handle value);
BISON_API bison_error
bison_set_int_at(bison_handle h, size_t index, int32_t value);
BISON_API bison_error
bison_set_float_at(bison_handle h, size_t index, float value);
BISON_API bison_error
bison_set_string_at(bison_handle h, size_t index, const char* value);
BISON_API bison_error
bison_get_int(bison_handle h, bison_hash name, int32_t* out);
BISON_API bison_error
bison_get_float(bison_handle h, bison_hash name, float* out);
BISON_API bison_error bison_get_bool(bison_handle h, bison_hash name, int* out);
BISON_API bison_error bison_get_string(
    bison_handle h,
    bison_hash name,
    char* buf,
    size_t buf_len,
    size_t* len_out);
BISON_API bison_error
bison_get_object(bison_handle h, bison_hash name, bison_handle* out);
BISON_API bison_error
bison_get_int_at(bison_handle h, size_t index, int32_t* out);
BISON_API bison_error
bison_get_float_at(bison_handle h, size_t index, float* out);
BISON_API bison_error bison_get_string_at(
    bison_handle h,
    size_t index,
    char* buf,
    size_t buf_len,
    size_t* len_out);
BISON_API size_t bison_size(bison_handle h);
BISON_API bison_error bison_add_method(
    bison_handle h,
    bison_hash name,
    bison_method_fn fn,
    void* user);
BISON_API bison_error bison_call(
    bison_handle h,
    bison_hash name,
    bison_handle params,
    bison_handle* result);
BISON_API bison_hash bison_key(const char* name);